--- a/JavaScript/Node/Intro/index.html
+++ b/JavaScript/Node/Intro/index.html
@@ -7,6 +7,7 @@
     <title>Cosas de javaScript</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <script type="module" src="saludo.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
